--- a/index.html
+++ b/index.html
@@ -42,8 +42,21 @@
 
         </select>
         <br><br>
-        <label>Specialization<br></label>
+        <label>Date of Birth</label>
+        <input type="date" required>
+        <br><br>
+        <label>Academic Qualification</label>
         <input type="text" required>
+        <br><br>
+        <label>Address</label>
+        <input type="textarea" required>
+        <br><br>
+        <label>Contact</label>
+        <input type="checkbox" name="email">Email
+        <input type="checkbox" name="phone">Phone number
+        <br><br>
+        <input type="submit">
+        
         <br><br>
         
 
